--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@plugin "tailwindcss-animate";
+
 @custom-variant dark (&:is(.dark *));
 
 :root {
